# sporlcli

./: .env.example  .env.vault  .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: documentation.yml
src/: common.rs  config.rs  lib.rs  main.rs  server.rs  types.rs  utils.rs
src/api/: callback.rs  health.rs  mod.rs
src/cli/: artists.rs  auth.rs  info.rs  mod.rs  playlist.rs  releases.rs
src/management/: artist.rs  auth.rs  mod.rs  release.rs  state.rs
src/spotify/: artists.rs  auth.rs  mod.rs  playlist.rs  releases.rs
tests/: utils_test.rs
