[package]
name = "sporlcli"
version = "0.1.0"
edition = "2024"
description = "A command-line interface for the Spotify API to fetch new releases of followed artists."
license = "UNLICENSED"

[[bin]]
name = "sporlcli"
path = "src/main.rs"

[dependencies]
async-fs = "2.1.3"
axum = "0.8.4"
axum-extra = "0.10.1"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["color", "derive"] }
clap_complete = "4.5.55"
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0.0"
dotenv = "0.15.0"
indicatif = "0.18.0"
rand = { version = "0.9.1", features = ["std"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "native-tls",
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tabled = "0.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tui-input = "0.14.0"
webbrowser = "1.0.5"
